--- a/src/styles.css
+++ b/src/styles.css
@@ -652,6 +652,18 @@ svg {
     text-align: center;
     margin: 0;
     visibility: hidden;
+    position: fixed;
+    z-index: 10;
+    top: -100%;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    transition: all 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .active {
+    visibility: visible;
+    top: 0;
+    background-color: rgb(204, 176, 15);
   }
   .Nav__list {
     display: block;
@@ -726,16 +738,6 @@ svg {
   }
   .Navigation.show .Nav__button:nth-child(3) {
     transform: translateY(-5px) rotate(-135deg);
-  }
-  .active {
-    background-color: rgb(204, 176, 15);
-    visibility: visible;
-    height: 100vh;
-    width: 100%;
-    z-index: 10;
-    position: fixed;
-    top: 0;
-    left: 0;
   }
   .Partners__div {
     width: 100rem;
